# Traditional-RAG-Implementation

./: .gitignore  pyproject.toml  requirements.txt
Dense/: 1-densesparse.ipynb
HydE/: 3-HyDE.ipynb
Multimododal-RAG/: 1-multimodalopenai.ipynb
Query-decomposition/: 2-querydecomposition.ipynb
Query-expansion-technique/: 1-queryexpansion.ipynb
Reranking/: 2-reranking.ipynb
Semantic-chunking/: 1-semantichunking.ipynb
dataingersionparsing/: csvfilesparsing.ipynb  databaseparsing.ipynb  dataingersion.ipynb  jsonparsing.ipynb  pdfingersion.ipynb  worddocumentparsing.ipynb
dataingersionparsing/data/databases/: company.db
dataingersionparsing/data/structured_files/: inventory.xlsx
dataingersionparsing/vectorstore/: chromadb.ipynb
vectorembeddings/: 3-Othervectorstores.ipynb  embeddings.ipynb
